Fix dropdown hover background color (ally) Make course cards fully clickable Fix navbar logo size Make gototop link visible Iclude new navdrawer

--- a/scss/components/cards.scss
+++ b/scss/components/cards.scss
@@ -45,8 +45,7 @@
     .link-go-to-content {
         .btn-primary:not(:disabled):hover,
         .btn-primary:not(:disabled):active:focus,
-        .btn-primary:focus,
-        {
+        .btn-primary:focus {
             color: $primary;
             background-color: transparent;
             box-shadow: initial;
@@ -120,5 +119,4 @@
 
 .card {
     border: initial;
-
 }
