--- a/scss/components/components.scss
+++ b/scss/components/components.scss
@@ -1,13 +1,25 @@
 .link-go-to-content {
 
-    position: absolute;
-    bottom: 0;
-    right: 0;
+    margin-top: auto;
+    display: flex;
+    justify-content: end;
 
     a {
-        position: relative;
+        z-index: 1;
+        display: flex;
         background: transparent;
         border: 0;
+        &:after {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            z-index: 1;
+            pointer-events: auto;
+            content: "";
+            background-color: rgba(0,0,0,0);
+        }
     }
 
     &:before {
